# FATODE

./: CMakeLists.txt  Dockerfile.full_algebra  Dockerfile.lapack  Dockerfile.superlu  Dockerfile.umf  LICENSE  README.md
.github/workflows/: test.yml
ADJ/: CMakeLists.txt
ADJ/ERK_ADJ/: CMakeLists.txt  ERK_ADJ_f90_Integrator.F90  erk_adj_f90_integrator.mod
ADJ/RK_ADJ/: CMakeLists.txt  LS_ADJ_RK_Solver.F90  LS_Solver.F90  RK_ADJ_f90_Integrator.F90
ADJ/ROS_ADJ/: CMakeLists.txt  LS_ADJ_ROS_Solver.F90  LS_Solver.F90  ROS_ADJ_f90_Integrator.F90
ADJ/SDIRK_ADJ/: CMakeLists.txt  LS_ADJ_SDIRK_Solver.F90  LS_Solver.F90  SDIRK_ADJ_f90_Integrator.F90
EXAMPLES/cbm4/CBM4_RK/: cbm4_rk  cbm4_rk_dr.F90
EXAMPLES/cbm4/CBM4_RK_ADJ/: cbm4_rk_adj  cbm4_rk_sol.txt
EXAMPLES/cbm4/CBM4_ROS/: cbm4_ros  cbm4_ros_dr.F90  gmon.out
EXAMPLES/cbm4/CBM4_ROS_ADJ/: Makefile  cbm4_Parameters.F90  cbm4_ros_adj  cbm4_ros_adj_dr.F90  cbm4_ros_sol.txt
EXAMPLES/cbm4/CBM4_SDIRK/: cbm4_sdirk  cbm4_sdirk_dr.F90  cbm4_sdirk_sol.txt
EXAMPLES/cbm4/CBM4_SDIRK_ADJ/: cbm4_output_sens.txt  cbm4_sdirk_adj
EXAMPLES/roberts/ROBERTS_RK_ADJ/: Makefile  roberts_rk_adj
EXAMPLES/roberts/ROBERTS_ROS_ADJ/: Makefile  roberts_ros_adj  roberts_ros_adj_dr.F90
EXAMPLES/roberts/ROBERTS_SDIRK_ADJ/: roberts_sdirk_adj
EXAMPLES/small_strato/small_rk/: small_strato
EXAMPLES/small_strato/small_ros/: User_Parameters.F90  small_strato
EXAMPLES/small_strato/small_ros_adj/: User_Parameters.F90  small_strato  small_strato_dr.F90
EXAMPLES/small_strato/small_sdirk/: small_strato
EXAMPLES/swe/SWE_ERK/: Makefile  swe2D_erk  swe2D_erk_dr.F90  swe2D_upwind.F90
EXAMPLES/swe/SWE_ERK_ADJ/: .swe2D_erk_adj_dr.F90.swp  swe2D_erk_adj  swe2D_erk_adj_dr.F90  swe2D_upwind.F90
EXAMPLES/swe/SWE_ERK_TLM/: swe2D_erk_tlm  swe2D_erk_tlm_dr.F90
EXAMPLES/swe/SWE_RK/: swe2D_rk  swe2D_rk_dr.F90  swe2D_upwind.F90
EXAMPLES/swe/SWE_RK_ADJ/: swe2D_rk_adj
EXAMPLES/swe/SWE_RK_TLM/: swe2D_rk_tlm
EXAMPLES/swe/SWE_ROS/: Makefile  swe2D_ros  swe2D_ros_dr.F90  swe2D_upwind.F90
EXAMPLES/swe/SWE_ROS_ADJ/: swe2D_ros_adj  swe2D_ros_adj_dr.F90  swe2D_upwind.F90
EXAMPLES/swe/SWE_ROS_TLM/: Makefile  swe2D_ros_tlm
EXAMPLES/swe/SWE_SDIRK/: Makefile  swe2D_sdirk  swe2D_upwind.F90
EXAMPLES/swe/SWE_SDIRK_ADJ/: swe2D_sdirk_adj
EXAMPLES/swe/SWE_SDIRK_TLM/: Makefile  swe2D_sdirk_tlm  swe2D_sdirk_tlm_dr.F90
FWD/: CMakeLists.txt
FWD/ERK/: CMakeLists.txt  ERK_f90_Integrator.F90  erk_f90_integrator.mod
FWD/RK/: CMakeLists.txt  LS_FWD_RK_Solver.F90  LS_Solver.F90  RK_f90_Integrator.F90
FWD/ROS/: CMakeLists.txt  LS_FWD_ROS_Solver.F90  LS_Solver.F90  ROS_f90_Integrator.F90
FWD/SDIRK/: CMakeLists.txt  LS_FWD_SDIRK_Solver.F90  LS_Solver.F90  SDIRK_f90_Integrator.F90
LSS_LIBS/: CMakeLists.txt
LSS_LIBS/x86_64_Linux/: CMakeLists.txt
LSS_LIBS/x86_64_Linux/SUPERLU/: CMakeLists.txt  Makefile  c_fortran_dgssv.c  c_fortran_zgssv.c
LSS_LIBS/x86_64_Linux/UMFPACK/: CMakeLists.txt  Makefile
TLM/: CMakeLists.txt
TLM/ERK_TLM/: CMakeLists.txt  ERK_TLM_f90_Integrator.F90  erk_tlm_f90_integrator.mod
TLM/RK_TLM/: CMakeLists.txt  LS_Solver.F90  LS_TLM_RK_Solver.F90  RK_TLM_f90_Integrator.F90
TLM/ROS_TLM/: CMakeLists.txt  LS_Solver.F90  LS_TLM_ROS_Solver.F90  ROS_TLM_f90_Integrator.F90
TLM/SDIRK_TLM/: CMakeLists.txt  LS_Solver.F90  LS_TLM_SDIRK_Solver.F90  SDIRK_TLM_f90_Integrator.F90
cmake/: cmake_uninstall.cmake.in  exclusive_options.cmake  fatodeConfig.cmake.in  test_util.cmake
packaging/: CMakeLists.txt
test/: CMakeLists.txt
test/cbm4/: CMakeLists.txt
test/cbm4/CBM4_RK/: CMakeLists.txt  Makefile  cbm4_parameters.mod  cbm4_rk_dr.F90  cbm4_rk_sol.txt
test/cbm4/CBM4_RK_ADJ/: CMakeLists.txt  Makefile  RK_ADJ_f90_Integrator.F90  cbm4_output_sens.txt  cbm4_rk_adj_dr.F90
test/cbm4/CBM4_ROS/: CMakeLists.txt  Makefile  cbm4_ros_dr.F90
test/cbm4/CBM4_ROS_ADJ/: CMakeLists.txt  cbm4_output_sens.txt  cbm4_ros_adj_dr.F90
test/cbm4/CBM4_SDIRK/: CMakeLists.txt  Makefile  cbm4_parameters.F90
test/cbm4/CBM4_SDIRK_ADJ/: CMakeLists.txt  Makefile  cbm4_Parameters.F90  cbm4_sdirk_adj_dr.F90  cbm4_sdirk_sol.txt
test/roberts/: CMakeLists.txt
test/roberts/ROBERTS_RK_ADJ/: CMakeLists.txt  roberts_rk_adj_dr.F90
test/roberts/ROBERTS_ROS_ADJ/: CMakeLists.txt
test/roberts/ROBERTS_SDIRK_ADJ/: CMakeLists.txt  Makefile  roberts_sdirk_adj_dr.F90
test/small_strato/: CMakeLists.txt
test/small_strato/small_rk/: CMakeLists.txt  Makefile  small_strato_dr.F90
test/small_strato/small_ros/: CMakeLists.txt  Makefile  small_strato_dr.F90
test/small_strato/small_ros_adj/: CMakeLists.txt  Makefile  rkadj_ADJ_results.m  small_strato_dr.F90
test/small_strato/small_sdirk/: CMakeLists.txt  Makefile  User_Parameters.F90  small_strato_dr.F90
test/swe/: CMakeLists.txt
test/swe/SWE_ERK/: CMakeLists.txt  swe2D_erk_dr.F90  swe2dxy_parameters.mod  swe_lsode_sol.txt
test/swe/SWE_ERK_ADJ/: CMakeLists.txt  Makefile
test/swe/SWE_ERK_TLM/: CMakeLists.txt  Makefile  swe2D_upwind.F90
test/swe/SWE_RK/: CMakeLists.txt  Makefile  swe2D_rk_dr.F90  swe_rk_lsode_sol.txt
test/swe/SWE_RK_ADJ/: CMakeLists.txt  Makefile  swe2D_rk_adj_dr.F90  swe2D_upwind.F90
test/swe/SWE_RK_TLM/: CMakeLists.txt  Makefile  swe2D_rk_tlm_dr.F90  swe2D_upwind.F90
test/swe/SWE_ROS/: CMakeLists.txt  swe2D_ros_dr.F90
test/swe/SWE_ROS_ADJ/: CMakeLists.txt  Makefile
test/swe/SWE_ROS_TLM/: CMakeLists.txt  swe2D_ros_tlm_dr.F90  swe2D_upwind.F90
test/swe/SWE_SDIRK/: swe_lsode_sol.txt
test/swe/SWE_SDIRK_ADJ/: CMakeLists.txt  Makefile  swe2D_sdirk_adj_dr.F90  swe2D_upwind.F90
test/swe/SWE_SDIRK_TLM/: CMakeLists.txt
