################################################################################
# Add subdirectories

add_subdirectory(SWE_ERK)
add_subdirectory(SWE_ERK_ADJ)
add_subdirectory(SWE_ERK_TLM)
add_subdirectory(SWE_RK)
add_subdirectory(SWE_RK_ADJ)
add_subdirectory(SWE_RK_TLM)
add_subdirectory(SWE_ROS)
add_subdirectory(SWE_ROS_ADJ)
add_subdirectory(SWE_ROS_TLM)
# add_subdirectory(SWE_SDIRK) #TODO: There is no driver for this
add_subdirectory(SWE_SDIRK_ADJ)
add_subdirectory(SWE_SDIRK_TLM)